Added white listing functionality to allow skipping of validation and signingInformation requirements.
