# src/integration-test/resources/api/openapi.yaml
@@ -1,41 +1,41 @@
 openapi: 3.1.0
 info:
   title: api-myrepresentatives
-  contact: {}
+  contact: { }
   license:
     name: MIT License
     url: https://opensource.org/licenses/MIT
-  version: "4.2"
+  version: "4.3"
 servers:
-- url: http://localhost:56548
-  description: Generated server url
+  - url: http://localhost:61773
+    description: Generated server url
 paths:
   /{municipalityId}/{namespace}/mandates:
     get:
       tags:
-      - MyRepresentatives
+        - MyRepresentatives
       summary: Search mandates
       operationId: searchMandates
       parameters:
-      - name: municipalityId
-        in: path
-        description: Municipality id
-        required: true
-        schema:
-          type: string
-        example: 2281
-      - name: namespace
-        in: path
-        description: Namespace
-        required: true
-        schema:
-          type: string
-        example: MY_NAMESPACE
-      - name: searchParameters
-        in: query
-        required: true
-        schema:
-          $ref: "#/components/schemas/SearchMandateParameters"
+        - name: municipalityId
+          in: path
+          description: Municipality id
+          required: true
+          schema:
+            type: string
+          example: 2281
+        - name: namespace
+          in: path
+          description: Namespace
+          required: true
+          schema:
+            type: string
+          example: MY_NAMESPACE
+        - name: searchParameters
+          in: query
+          required: true
+          schema:
+            $ref: "#/components/schemas/SearchMandateParameters"
       responses:
         "200":
           description: Successful Operation
@@ -49,8 +49,8 @@ paths:
             application/problem+json:
               schema:
                 oneOf:
-                - $ref: "#/components/schemas/Problem"
-                - $ref: "#/components/schemas/ConstraintViolationProblem"
+                  - $ref: "#/components/schemas/Problem"
+                  - $ref: "#/components/schemas/ConstraintViolationProblem"
         "500":
           description: Internal Server Error
           content:
@@ -59,24 +59,24 @@ paths:
                 $ref: "#/components/schemas/Problem"
     post:
       tags:
-      - MyRepresentatives
+        - MyRepresentatives
       summary: Create mandates
       operationId: createMandate
       parameters:
-      - name: municipalityId
-        in: path
-        description: Municipality id
-        required: true
-        schema:
-          type: string
-        example: 2281
-      - name: namespace
-        in: path
-        description: Namespace
-        required: true
-        schema:
-          type: string
-        example: MY_NAMESPACE
+        - name: municipalityId
+          in: path
+          description: Municipality id
+          required: true
+          schema:
+            type: string
+          example: 2281
+        - name: namespace
+          in: path
+          description: Namespace
+          required: true
+          schema:
+            type: string
+          example: MY_NAMESPACE
       requestBody:
         content:
           application/json:
@@ -110,8 +110,8 @@ paths:
             application/problem+json:
               schema:
                 oneOf:
-                - $ref: "#/components/schemas/Problem"
-                - $ref: "#/components/schemas/ConstraintViolationProblem"
+                  - $ref: "#/components/schemas/Problem"
+                  - $ref: "#/components/schemas/ConstraintViolationProblem"
         "500":
           description: Internal Server Error
           content:
@@ -121,31 +121,31 @@ paths:
   /{municipalityId}/{namespace}/mandates/{id}:
     get:
       tags:
-      - MyRepresentatives
+        - MyRepresentatives
       summary: "Get mandate by id, also returns BankID signing information"
       operationId: getMandateById
       parameters:
-      - name: municipalityId
-        in: path
-        description: Municipality id
-        required: true
-        schema:
-          type: string
-        example: 2281
-      - name: namespace
-        in: path
-        description: Namespace
-        required: true
-        schema:
-          type: string
-        example: MY_NAMESPACE
-      - name: id
-        in: path
-        description: Id of the mandate
-        required: true
-        schema:
-          type: string
-        example: 2facc7a8-69e1-4988-9b3d-4da6cefab704
+        - name: municipalityId
+          in: path
+          description: Municipality id
+          required: true
+          schema:
+            type: string
+          example: 2281
+        - name: namespace
+          in: path
+          description: Namespace
+          required: true
+          schema:
+            type: string
+          example: MY_NAMESPACE
+        - name: id
+          in: path
+          description: Id of the mandate
+          required: true
+          schema:
+            type: string
+          example: 2facc7a8-69e1-4988-9b3d-4da6cefab704
       responses:
         "200":
           description: Successful Operation
@@ -165,8 +165,8 @@ paths:
             application/problem+json:
               schema:
                 oneOf:
-                - $ref: "#/components/schemas/Problem"
-                - $ref: "#/components/schemas/ConstraintViolationProblem"
+                  - $ref: "#/components/schemas/Problem"
+                  - $ref: "#/components/schemas/ConstraintViolationProblem"
         "500":
           description: Internal Server Error
           content:
@@ -175,31 +175,31 @@ paths:
                 $ref: "#/components/schemas/Problem"
     delete:
       tags:
-      - MyRepresentatives
+        - MyRepresentatives
       summary: "Delete mandate, performs a soft delete"
       operationId: deleteMandate
       parameters:
-      - name: municipalityId
-        in: path
-        description: Municipality id
-        required: true
-        schema:
-          type: string
-        example: 2281
-      - name: namespace
-        in: path
-        description: Namespace
-        required: true
-        schema:
-          type: string
-        example: MY_NAMESPACE
-      - name: id
-        in: path
-        description: Id of the mandate
-        required: true
-        schema:
-          type: string
-        example: 2facc7a8-69e1-4988-9b3d-4da6cefab704
+        - name: municipalityId
+          in: path
+          description: Municipality id
+          required: true
+          schema:
+            type: string
+          example: 2281
+        - name: namespace
+          in: path
+          description: Namespace
+          required: true
+          schema:
+            type: string
+          example: MY_NAMESPACE
+        - name: id
+          in: path
+          description: Id of the mandate
+          required: true
+          schema:
+            type: string
+          example: 2facc7a8-69e1-4988-9b3d-4da6cefab704
       responses:
         "204":
           description: No Content
@@ -209,8 +209,8 @@ paths:
             application/problem+json:
               schema:
                 oneOf:
-                - $ref: "#/components/schemas/Problem"
-                - $ref: "#/components/schemas/ConstraintViolationProblem"
+                  - $ref: "#/components/schemas/Problem"
+                  - $ref: "#/components/schemas/ConstraintViolationProblem"
         "500":
           description: Internal Server Error
           content:
@@ -220,7 +220,7 @@ paths:
   /api-docs:
     get:
       tags:
-      - API
+        - API
       summary: OpenAPI
       operationId: getApiDocs
       responses:
@@ -238,12 +238,6 @@ components:
     Problem:
       type: object
       properties:
-        title:
-          type: string
-        detail:
-          type: string
-        status:
-          $ref: "#/components/schemas/StatusType"
         instance:
           type: string
           format: uri
@@ -252,7 +246,13 @@ components:
           format: uri
         parameters:
           type: object
-          additionalProperties: {}
+          additionalProperties: { }
+        status:
+          $ref: "#/components/schemas/StatusType"
+        title:
+          type: string
+        detail:
+          type: string
     StatusType:
       type: object
       properties:
@@ -269,24 +269,24 @@ components:
           format: date
           description: When the BankID was issued
           examples:
-          - 2020-01-02
+            - 2020-01-02
         signature:
           type: string
           description: The signature made by the receiving party
           examples:
-          - YmFzZTY0LWVuY29kZWQgZGF0YQ==
+            - YmFzZTY0LWVuY29kZWQgZGF0YQ==
           minLength: 1
         ocspResponse:
           type: string
           description: Online certificate status protocol for the signing order
           examples:
-          - YmFzZTY0LWVuY29kZWQgZGF0YQ==
+            - YmFzZTY0LWVuY29kZWQgZGF0YQ==
         risk:
           type: string
           description: Indicates the risk level of the order based on data available
             in the order
           examples:
-          - low
+            - low
         user:
           $ref: "#/components/schemas/User"
           description: Information regarding the signing party
@@ -298,9 +298,9 @@ components:
           description: Information about possible additional verifications that were
             part of the signing order
       required:
-      - device
-      - signature
-      - user
+        - device
+        - signature
+        - user
     CreateMandate:
       type: object
       description: CreateMandate model
@@ -316,22 +316,21 @@ components:
           format: date
           description: The date when the mandate becomes effective
           examples:
-          - 2025-08-01
+            - 2025-08-01
         inactiveAfter:
           type: string
           format: date
           description: "The date after which the mandate is no longer valid, if not\
             \ provided it will be set to activeFrom + 36 months"
           examples:
-          - 2025-12-31
+            - 2025-12-31
         signingInfo:
           $ref: "#/components/schemas/SigningInfo"
           description: Signing information related to the mandate
       required:
-      - activeFrom
-      - granteeDetails
-      - grantorDetails
-      - signingInfo
+        - activeFrom
+        - granteeDetails
+        - grantorDetails
     Device:
       type: object
       properties:
@@ -339,16 +338,16 @@ components:
           type: string
           description: Ip address used when the letter was signed
           examples:
-          - 192.168.1.1
+            - 192.168.1.1
           minLength: 1
         uhi:
           type: string
           description: The Unique Hardware Identifier for the user’s device holding
             the BankID
           examples:
-          - OZvYM9VvyiAmG7NA5jU5zqGcVpo=
+            - OZvYM9VvyiAmG7NA5jU5zqGcVpo=
       required:
-      - ipAddress
+        - ipAddress
     GranteeDetails:
       type: object
       description: GranteeDetails model
@@ -357,9 +356,9 @@ components:
           type: string
           description: PartyId of the grantee
           examples:
-          - fb2f0290-3820-11ed-a261-0242ac120004
+            - fb2f0290-3820-11ed-a261-0242ac120004
       required:
-      - partyId
+        - partyId
     GrantorDetails:
       type: object
       description: GrantorDetails model
@@ -368,20 +367,20 @@ components:
           type: string
           description: The name of the granting organization or person
           examples:
-          - Ankeborgs Margarinfabrik
+            - Ankeborgs Margarinfabrik
         grantorPartyId:
           type: string
           description: The partyId of the issuing organization or person
           examples:
-          - fb2f0290-3820-11ed-a261-0242ac120002
+            - fb2f0290-3820-11ed-a261-0242ac120002
         signatoryPartyId:
           type: string
           description: PartyId of the issuing person / signatory
           examples:
-          - fb2f0290-3820-11ed-a261-0242ac120003
+            - fb2f0290-3820-11ed-a261-0242ac120003
       required:
-      - grantorPartyId
-      - signatoryPartyId
+        - grantorPartyId
+        - signatoryPartyId
     SigningInfo:
       type: object
       description: SigningInfo model
@@ -390,28 +389,28 @@ components:
           type: string
           description: Reference for the signing order
           examples:
-          - 131daac9-16c6-4618-beb0-365768f37288
+            - 131daac9-16c6-4618-beb0-365768f37288
           minLength: 1
         externalTransactionId:
           type: string
           description: External transactionId
           examples:
-          - 87b53852-df66-4eab-bed1-873f927a2dcc
+            - 87b53852-df66-4eab-bed1-873f927a2dcc
           minLength: 1
         status:
           type: string
           description: Status of the signing order
           examples:
-          - complete
+            - complete
           minLength: 1
         completionData:
           $ref: "#/components/schemas/CompletionData"
           description: Information about the user and the completed order
       required:
-      - completionData
-      - externalTransactionId
-      - orderRef
-      - status
+        - completionData
+        - externalTransactionId
+        - orderRef
+        - status
     StepUp:
       type: object
       properties:
@@ -419,7 +418,7 @@ components:
           type: boolean
           description: Whether an MRTD check was performed before the order was completed
           examples:
-          - "true"
+            - "true"
     User:
       type: object
       properties:
@@ -427,29 +426,29 @@ components:
           type: string
           description: Personal identity number for the signing party
           examples:
-          - "200001012384"
+            - "200001012384"
           minLength: 1
         name:
           type: string
           description: Full name of the signing party
           examples:
-          - John Wick
+            - John Wick
         givenName:
           type: string
           description: First name of the signing party
           examples:
-          - John
+            - John
           minLength: 1
         surname:
           type: string
           description: Last name of the signing party
           examples:
-          - Wick
+            - Wick
           minLength: 1
       required:
-      - givenName
-      - personalNumber
-      - surname
+        - givenName
+        - personalNumber
+        - surname
     ConstraintViolationProblem:
       type: object
       properties:
@@ -490,14 +489,14 @@ components:
           type: string
         message:
           type: string
-        detail:
-          type: string
         instance:
           type: string
           format: uri
         parameters:
           type: object
-          additionalProperties: {}
+          additionalProperties: { }
+        detail:
+          type: string
         suppressed:
           type: array
           items:
@@ -534,7 +533,7 @@ components:
     ThrowableProblem:
       type: object
       properties:
-        cause: {}
+        cause: { }
         stackTrace:
           type: array
           items:
@@ -559,12 +558,6 @@ components:
                 type: boolean
         message:
           type: string
-        title:
-          type: string
-        detail:
-          type: string
-        status:
-          $ref: "#/components/schemas/StatusType"
         instance:
           type: string
           format: uri
@@ -573,7 +566,13 @@ components:
           format: uri
         parameters:
           type: object
-          additionalProperties: {}
+          additionalProperties: { }
+        status:
+          $ref: "#/components/schemas/StatusType"
+        title:
+          type: string
+        detail:
+          type: string
         suppressed:
           type: array
           items:
@@ -636,17 +635,17 @@ components:
           type: string
           description: The partyId of the issuing organization or person
           examples:
-          - fb2f0290-3820-11ed-a261-0242ac120002
+            - fb2f0290-3820-11ed-a261-0242ac120002
         granteePartyId:
           type: string
           description: PartyId of the grantee
           examples:
-          - fb2f0290-3820-11ed-a261-0242ac120004
+            - fb2f0290-3820-11ed-a261-0242ac120004
         signatoryPartyId:
           type: string
           description: PartyId of the issuing person / signatory
           examples:
-          - fb2f0290-3820-11ed-a261-0242ac120003
+            - fb2f0290-3820-11ed-a261-0242ac120003
         statuses:
           type: array
           description: List of mandate statuses
@@ -655,8 +654,8 @@ components:
     Direction:
       type: string
       enum:
-      - ASC
-      - DESC
+        - ASC
+        - DESC
     MandateDetails:
       type: object
       description: MandateDetails model
@@ -665,7 +664,7 @@ components:
           type: string
           description: Id of the mandate
           examples:
-          - 123e4567-e89b-12d3-a456-426614174000
+            - 123e4567-e89b-12d3-a456-426614174000
           readOnly: true
         grantorDetails:
           $ref: "#/components/schemas/GrantorDetails"
@@ -679,7 +678,7 @@ components:
           type: string
           description: MunicipalityId where the mandate was created
           examples:
-          - "2281"
+            - "2281"
           readOnly: true
         namespace:
           type: string
@@ -690,34 +689,34 @@ components:
           format: date-time
           description: The date and time when the mandate was created
           examples:
-          - 2023-11-22T15:30:0+02:00
+            - 2023-11-22T15:30:0+02:00
           readOnly: true
         updated:
           type: string
           format: date-time
           description: The date and time when the mandate was changed
           examples:
-          - 2025-11-22T15:30:00+02:00
+            - 2025-11-22T15:30:00+02:00
           readOnly: true
         activeFrom:
           type: string
           format: date
           description: The date when the mandate becomes effective
           examples:
-          - 2025-01-01
+            - 2025-01-01
           readOnly: true
         inactiveAfter:
           type: string
           format: date
           description: The date after which the mandate is no longer valid
           examples:
-          - 2025-12-31
+            - 2025-12-31
           readOnly: true
         status:
           type: string
           description: Indicates whether the mandate is active or not
           examples:
-          - ACTIVE | INACTIVE | EXPIRED | DELETED
+            - ACTIVE | INACTIVE | EXPIRED | DELETED
           readOnly: true
         signingInfo:
           $ref: "#/components/schemas/SigningInfo"
@@ -782,4 +781,4 @@ components:
           $ref: "#/components/schemas/Direction"
           description: The sort order direction
           example: ASC
-  securitySchemes: {}
+  securitySchemes: { }
